manifests/12_gateway_api/deploy-gateway.yaml
# Практика 12. Тестовое приложение и Service для Gateway API.
# Применение:  kubectl apply -f manifests/12_gateway_api/deploy-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=Hello, Gateway!"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
